; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/copymove/extr_copymove.c_CreateTestDir.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/copymove/extr_copymove.c_CreateTestDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"CreateDirectory failed with code %lu\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @CreateTestDir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CreateTestDir(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @CreateDirectory(i32 %3, i32* null)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %11, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @stderr, align 4
  %8 = call i32 (...) @GetLastError()
  %9 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = call i32 @exit(i32 1) #3
  unreachable

11:                                               ; preds = %1
  ret void
}

declare dso_local i32 @CreateDirectory(i32, i32*) #1

declare dso_local i32 @fprintf(i32, i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
